deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lite-ad-server
spec:
  selector:
    app: lite-ad-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
